many adaptations after merging fixwidgets

--- a/notebooks/MBKMeansDemo.ipynb
+++ b/notebooks/MBKMeansDemo.ipynb
@@ -37,13 +37,13 @@
     "data = CSVLoader(get_dataset('cluster:s1'),sep='\\\\s+',skipinitialspace=True,header=None,index_col=False,scheduler=s)\n",
     "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=15, batch_size=100, is_input=False, scheduler=s)\n",
     "sp = MCScatterPlot(scheduler=s, classes=[('Scatterplot', '_0', '_1', mbkmeans)])\n",
-    "sp.create_dependent_modules(data,'table')\n",
-    "sp['Scatterplot'].min_value._table = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
-    "sp['Scatterplot'].max_value._table = PsDict({'_0': np.inf, '_1': np.inf})\n",
-    "mbkmeans.input.table = sp['Scatterplot'].range_query_2d.output.table\n",
+    "sp.create_dependent_modules(data,'result')\n",
+    "sp['Scatterplot'].min_value.result = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
+    "sp['Scatterplot'].max_value.result = PsDict({'_0': np.inf, '_1': np.inf})\n",
+    "mbkmeans.input.table = sp['Scatterplot'].range_query_2d.output.result\n",
     "mbkmeans.create_dependent_modules()\n",
     "prn = Every(scheduler=s)\n",
-    "prn.input.df = mbkmeans.output.table\n",
+    "prn.input.df = mbkmeans.output.result\n",
     "\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
