--- a/notebooks/MBKMeansSimpleDemo.ipynb
+++ b/notebooks/MBKMeansSimpleDemo.ipynb
@@ -49,10 +49,10 @@
     "    data = MVBlobsTable(columns=['_0', '_1'], means=means, covs=covs, rows=999999, scheduler=s)\n",
     "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=3, batch_size=100, tol=0.01, is_input=False, scheduler=s)\n",
     "sp = MCScatterPlot(scheduler=s, classes=[('Scatterplot', '_0', '_1', mbkmeans)])\n",
-    "sp.create_dependent_modules(data,'table')\n",
-    "sp['Scatterplot'].min_value._table = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
-    "sp['Scatterplot'].max_value._table = PsDict({'_0': np.inf, '_1': np.inf})\n",
-    "mbkmeans.input.table = sp['Scatterplot'].range_query_2d.output.table\n",
+    "sp.create_dependent_modules(data,'result')\n",
+    "sp['Scatterplot'].min_value.result = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
+    "sp['Scatterplot'].max_value.result = PsDict({'_0': np.inf, '_1': np.inf})\n",
+    "mbkmeans.input[0] = sp['Scatterplot'].range_query_2d.output[0]\n",
     "#mbkmeans.input.table = data.output.table\n",
     "mbkmeans.create_dependent_modules()\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
@@ -78,7 +78,8 @@
    "outputs": [],
    "source": [
     "#print(psboard.viz_register)\n",
-    "display(psboard.viz_register['mc_scatter_plot_1'][0][0])"
+    "#display(psboard.viz_register['mc_scatter_plot_1'][0][0])\n",
+    "display(psboard)"
    ]
   }
  ],
