--- a/notebooks/MBKMeansWithLabelsDemo.ipynb
+++ b/notebooks/MBKMeansWithLabelsDemo.ipynb
@@ -46,18 +46,18 @@
     "for i in range(n_clusters):\n",
     "    cname = f\"k{i}\"\n",
     "    filt = MBKMeansFilter(i, scheduler=s)\n",
-    "    filt.create_dependent_modules(mbkmeans, data, 'table')\n",
+    "    filt.create_dependent_modules(mbkmeans, data, 'result')\n",
     "    classes.append({'name': cname, 'x_column': '_0',\n",
     "                    'y_column': '_1', 'sample': mbkmeans if i==0 else None,\n",
-    "                    'sample_slot': 'table',\n",
-    "                    'input_module': filt, 'input_slot': 'table'})\n",
+    "                    'sample_slot': 'result',\n",
+    "                    'input_module': filt, 'input_slot': 'result'})\n",
     "sp = MCScatterPlot(scheduler=s, classes=classes)\n",
     "sp.create_dependent_modules()\n",
     "for i in range(n_clusters):\n",
     "    cname = f\"k{i}\"\n",
-    "    sp[cname].min_value._table = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
-    "    sp[cname].max_value._table = PsDict({'_0': np.inf, '_1': np.inf})\n",
-    "mbkmeans.input.table = data.output.table\n",
+    "    sp[cname].min_value.result = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
+    "    sp[cname].max_value.result = PsDict({'_0': np.inf, '_1': np.inf})\n",
+    "mbkmeans.input[0] = data.output[0]\n",
     "mbkmeans.create_dependent_modules()\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
