--- a/notebooks/PPCAProjectionToy.ipynb
+++ b/notebooks/PPCAProjectionToy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,14 +34,14 @@
     "except NameError:\n",
     "    s = Scheduler()\n",
     "\n",
-    "n_samples = 10000000\n",
+    "n_samples = 10_000_000\n",
     "n_components = 2\n",
     "rtol = 0.01\n",
     "centers = [(0.1, 0.3, 0.5), (0.7, 0.5, 3.3), (-0.4, -0.3, -11.1)]\n",
     "data = BlobsTable(columns=['_0', '_1', '_2'],  centers=centers,\n",
     "                          cluster_std=0.2, rows=n_samples, scheduler=s)\n",
     "ppca = PPCA(scheduler=s)\n",
-    "ppca.input.table = data.output.table\n",
+    "ppca.input[0] = data.output.result\n",
     "ppca.params.n_components = n_components\n",
     "ppca.create_dependent_modules(rtol=rtol)\n",
     "cnames = ['samples', 'prev_samples']\n",
@@ -49,12 +49,12 @@
     "for cn in cnames:\n",
     "    classes.append({'name': cn, 'x_column': '_pc0',\n",
     "                    'y_column': '_pc1', 'sample': ppca.reduced, 'sample_slot': cn,\n",
-    "                    'input_module': ppca.reduced, 'input_slot': 'table'})\n",
+    "                    'input_module': ppca.reduced, 'input_slot': 'result'})\n",
     "sp = MCScatterPlot(scheduler=s, classes=classes)\n",
     "sp.create_dependent_modules()\n",
     "for cn in cnames:\n",
-    "    sp[cn].min_value._table = PsDict({'_pc0': -np.inf, '_pc1': -np.inf})\n",
-    "    sp[cn].max_value._table = PsDict({'_pc0': np.inf, '_pc1': np.inf})\n",
+    "    sp[cn].min_value.result = PsDict({'_pc0': -np.inf, '_pc1': -np.inf})\n",
+    "    sp[cn].max_value.result = PsDict({'_pc0': np.inf, '_pc1': np.inf})\n",
     "sp_widget = Scatterplot()\n",
     "widget_coros = sp_widget.link_module(sp)\n",
     "gather_and_run(s.start(tick_proc=moderator), *widget_coros)"
@@ -62,26 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8447af0cda5d4cfa9ead4dcfde9f035d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Scatterplot(to_hide=[])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(sp_widget)"
    ]
