--- a/notebooks/PsBoardDemo.ipynb
+++ b/notebooks/PsBoardDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,15 +63,15 @@
     "                             'dropoff_longitude', 'dropoff_latitude'],\n",
     "                filter_=_filter, scheduler=s) # TODO: reimplement filter in read_csv.py\n",
     "\n",
-    "CSV.input.filenames = CST.output.table\n",
+    "CSV.input.filenames = CST.output[0]\n",
     "PR = Every(scheduler=s, proc=_quiet)\n",
-    "PR.input.df = CSV.output.table\n",
+    "PR.input[0] = CSV.output[0]\n",
     "\n",
     "\n",
     "MULTICLASS = MCScatterPlot(scheduler=s, classes=[\n",
     "    ('pickup', 'pickup_longitude', 'pickup_latitude'),\n",
     "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
-    "MULTICLASS.create_dependent_modules(CSV, 'table')\n",
+    "MULTICLASS.create_dependent_modules(CSV)\n",
     "\n",
     "# Create the dashboard object\n",
     "psboard = PsBoard(s)\n",
@@ -88,31 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f4da43bcdd345ad9641401a2ff49607",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "PsBoard(children=(ControlPanel(children=(Button(description='Resume', disabled=True, icon='play', style=Button…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "************************"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sidecar import Sidecar\n",
     "sc = Sidecar(title='Sidecar Output')\n",
@@ -144,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
