--- a/notebooks/PsBoardDemo4Binder.ipynb
+++ b/notebooks/PsBoardDemo4Binder.ipynb
@@ -55,15 +55,15 @@
     "                             'dropoff_longitude', 'dropoff_latitude'],\n",
     "                filter_=_filter, scheduler=s) # TODO: reimplement filter in read_csv.py\n",
     "\n",
-    "CSV.input.filenames = CST.output.table\n",
+    "CSV.input.filenames = CST.output[0]\n",
     "PR = Every(scheduler=s, proc=_quiet)\n",
-    "PR.input.df = CSV.output.table\n",
+    "PR.input[0] = CSV.output[0]\n",
     "\n",
     "\n",
     "MULTICLASS = MCScatterPlot(scheduler=s, classes=[\n",
     "    ('pickup', 'pickup_longitude', 'pickup_latitude'),\n",
     "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
-    "MULTICLASS.create_dependent_modules(CSV, 'table')\n",
+    "MULTICLASS.create_dependent_modules(CSV)\n",
     "\n",
     "# Create the dashboard object\n",
     "psboard = PsBoard(s)\n",
