--- a/notebooks/ExampleDataTable.ipynb
+++ b/notebooks/ExampleDataTable.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,27 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d9b2b62ddc9467bafd1edf4e87213d1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "DataTable(columns='[\"index\", \"a\", \"b\"]', data='{\"data\": [[0, 78, 0.4830804169178009], [1, 32, 0.67952984571456…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dt.columns = JSONEncoderNp.dumps(['index']+t.columns)\n",
-    "data = t.iloc[0:10].to_json(orient='datatable')\n",
+    "data = t.loc[0:10].to_json(orient='datatable')\n",
     "js_data = {'data': data, 'recordsTotal': len(t), \n",
     "           'recordsFiltered': len(t), 'length': len(t), 'draw':1}\n",
     "dt.data = JSONEncoderNp.dumps(js_data)\n",
@@ -59,45 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d9b2b62ddc9467bafd1edf4e87213d1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "DataTable(columns='[\"index\", \"a\", \"b\"]', data='{\"data\": [[0, 78, 0.4830804169178009], [1, 32, 0.67952984571456…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "348beb494a1647cd9240f8179d5f8299",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "output2 = widgets.Output()\n",
     "display(dt, output2)\n",
     "\n",
     "def on_value_change(change):\n",
     "    info = change['new']\n",
-    "    data = t.iloc[info['start']:info['end']].to_json(orient='datatable')\n",
+    "    data = t.loc[info['start']:info['end']].to_json(orient='datatable')\n",
     "    js_data = {'data': data, 'recordsTotal': len(t), 'recordsFiltered': len(t), \n",
     "               'length': len(t), 'draw':info['draw'], 'page':info['page']}\n",
     "    dt.data = JSONEncoderNp.dumps(js_data)\n",
@@ -130,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
