--- a/notebooks/MulticlassScatterplotDemo.ipynb
+++ b/notebooks/MulticlassScatterplotDemo.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "%gui asyncio\n",
-    "from progressivis.nbwidgets import *\n",
+    "from progressivis_nb_widgets import *\n",
     "sc = Scatterplot()\n",
     "gr = ModuleGraph()"
    ]
@@ -77,14 +77,14 @@
     "                             'dropoff_longitude', 'dropoff_latitude'],\n",
     "                filter_=_filter, scheduler=s) # TODO: reimplement filter in read_csv.py\n",
     "\n",
-    "CSV.input.filenames = CST.output.table\n",
+    "CSV.input.filenames = CST.output[0]\n",
     "PR = Every(scheduler=s, proc=_quiet)\n",
-    "PR.input.df = CSV.output.table\n",
+    "PR.input.df = CSV.output[0]\n",
     "\n",
     "MULTICLASS = MCScatterPlot(scheduler=s, classes=[\n",
     "    ('pickup', 'pickup_longitude', 'pickup_latitude'),\n",
     "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
-    "MULTICLASS.create_dependent_modules(CSV, 'table')\n",
+    "MULTICLASS.create_dependent_modules(CSV, 'result')\n",
     "\n",
     "async def control_panel(action):\n",
     "    btn, cb =  cpanel.cb_args(action)\n",
