--- a/notebooks/HeatmapDemo.ipynb
+++ b/notebooks/HeatmapDemo.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "partial-springer",
+   "metadata": {},
+   "source": [
+    "## Listing 1. Visualizing the Heatmap of a large data table with ProgressiVis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "geographic-shannon",
@@ -26,14 +34,22 @@
     "histogram2d.input.table = csv_module.output.result\n",
     "histogram2d.input.min = min_module.output.result\n",
     "histogram2d.input.max = max_module.output.result\n",
-    "heatmap=Heatmap(filename='histo_tmp.png') # compute the Heatmap\n",
+    "heatmap=Heatmap() # compute the Heatmap\n",
     "heatmap.input.array = histogram2d.output.result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "revised-kuwait",
+   "metadata": {},
+   "source": [
+    "**NB:** the results will appear below after running all cells :"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lesbian-tattoo",
+   "id": "fleet-final",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,12 +58,11 @@
     "wg = None\n",
     "async def _after_run(m, run_number):\n",
     "    global wg\n",
-    "    if m.result is None or not len(m.result):\n",
+    "    img = m.get_image_bin()\n",
+    "    if img is None:\n",
     "        return\n",
-    "    filename = m.result.last()['filename']\n",
-    "    img = open(filename, 'rb').read()\n",
     "    if wg is None:\n",
-    "        wg = ipw.Image(value=img)\n",
+    "        wg = ipw.Image(value=img, width=512, height=512)\n",
     "        display(wg)\n",
     "    else:\n",
     "        wg.value = img\n",
