--- a/notebooks/PsBoardDemo.ipynb
+++ b/notebooks/PsBoardDemo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "\n",
     "FILENAMES = pd.DataFrame({'filename': URLS})\n",
     "CST = Constant(Table('filenames', data=FILENAMES), scheduler=s)\n",
-    "CSV = CSVLoader(index_col=False, skipinitialspace=True,\n",
+    "CSV = CSVLoader(index_col=False, skipinitialspace=True, header=0,\n",
     "                usecols=['pickup_longitude', 'pickup_latitude',\n",
     "                             'dropoff_longitude', 'dropoff_latitude'],\n",
     "                filter_=_filter, scheduler=s) # TODO: reimplement filter in read_csv.py\n",
@@ -88,31 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e6fe3442d0c4a66963fca70cb0c46c4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "PsBoard(children=(ControlPanel(children=(Button(description='Resume', disabled=True, icon='play', style=Button…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "***********************"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sidecar import Sidecar\n",
     "sc = Sidecar(title='Sidecar Output')\n",
@@ -144,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
