--- a/notebooks/PsBoardDemo4Binder.ipynb
+++ b/notebooks/PsBoardDemo4Binder.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "FILENAMES = pd.DataFrame({'filename': URLS})\n",
     "CST = Constant(Table('filenames', data=FILENAMES), scheduler=s)\n",
-    "CSV = CSVLoader(index_col=False, skipinitialspace=True,\n",
+    "CSV = CSVLoader(index_col=False, skipinitialspace=True, header=0,\n",
     "                usecols=['pickup_longitude', 'pickup_latitude',\n",
     "                             'dropoff_longitude', 'dropoff_latitude'],\n",
     "                filter_=_filter, scheduler=s) # TODO: reimplement filter in read_csv.py\n",
@@ -108,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
