--- a/notebooks/HeatmapDemo.ipynb
+++ b/notebooks/HeatmapDemo.ipynb
@@ -22,7 +22,7 @@
     "from progressivis.vis import Heatmap\n",
     "s = Scheduler.default = Scheduler()\n",
     "URLS = [f\"https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_2015-0{n}.csv\" for n in range(1,7)]\n",
-    "csv_module = CSVLoader(URLS, index_col=False, skipinitialspace=True, header=0,\n",
+    "csv_module = CSVLoader(URLS, index_col=False, skipinitialspace=True,\n",
     "                usecols=['pickup_longitude', 'pickup_latitude']) # load many compressed CSV files\n",
     "min_module = Min() # computes the min value of each column\n",
     "min_module.input.table = csv_module.output.result\n",
@@ -66,7 +66,6 @@
     "        display(wg)\n",
     "    else:\n",
     "        wg.value = img\n",
-    "    \n",
     "heatmap.after_run_proc = _after_run\n",
     "\n",
     "await s.start()"
