--- a/notebooks/MBKMeansSimpleDemo.ipynb
+++ b/notebooks/MBKMeansSimpleDemo.ipynb
@@ -52,9 +52,8 @@
     "sp.create_dependent_modules(data,'result')\n",
     "sp['Scatterplot'].min_value.result = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
     "sp['Scatterplot'].max_value.result = PsDict({'_0': np.inf, '_1': np.inf})\n",
-    "mbkmeans.input[0] = sp['Scatterplot'].range_query_2d.output[0]\n",
     "#mbkmeans.input.table = data.output.table\n",
-    "mbkmeans.create_dependent_modules()\n",
+    "mbkmeans.create_dependent_modules(sp['Scatterplot'].range_query_2d)\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
     "\n",
@@ -99,7 +98,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
