--- a/notebooks/MBKMeansDemo.ipynb
+++ b/notebooks/MBKMeansDemo.ipynb
@@ -40,8 +40,7 @@
     "sp.create_dependent_modules(data,'result')\n",
     "sp['Scatterplot'].min_value.result = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
     "sp['Scatterplot'].max_value.result = PsDict({'_0': np.inf, '_1': np.inf})\n",
-    "mbkmeans.input.table = sp['Scatterplot'].range_query_2d.output.result\n",
-    "mbkmeans.create_dependent_modules()\n",
+    "mbkmeans.create_dependent_modules(sp['Scatterplot'].range_query_2d)\n",
     "prn = Every(scheduler=s)\n",
     "prn.input.df = mbkmeans.output.result\n",
     "\n",
@@ -87,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
