--- a/notebooks/MBKMeansWithLabelsDemo.ipynb
+++ b/notebooks/MBKMeansWithLabelsDemo.ipynb
@@ -57,8 +57,7 @@
     "    cname = f\"k{i}\"\n",
     "    sp[cname].min_value.result = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
     "    sp[cname].max_value.result = PsDict({'_0': np.inf, '_1': np.inf})\n",
-    "mbkmeans.input[0] = data.output[0]\n",
-    "mbkmeans.create_dependent_modules()\n",
+    "mbkmeans.create_dependent_modules(data.output)\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
     "psboard = PsBoard(s)\n",
@@ -100,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
