--- a/notebooks/MBKMeansWithLabelsDemo.ipynb
+++ b/notebooks/MBKMeansWithLabelsDemo.ipynb
@@ -42,6 +42,7 @@
     "n_clusters = 3\n",
     "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=n_clusters, \n",
     "                    batch_size=100, tol=0.01, is_input=False, scheduler=s)\n",
+    "mbkmeans.create_dependent_modules(data)\n",
     "classes = []\n",
     "for i in range(n_clusters):\n",
     "    cname = f\"k{i}\"\n",
@@ -57,7 +58,7 @@
     "    cname = f\"k{i}\"\n",
     "    sp[cname].min_value.result = PsDict({'_0': -np.inf, '_1': -np.inf})\n",
     "    sp[cname].max_value.result = PsDict({'_0': np.inf, '_1': np.inf})\n",
-    "mbkmeans.create_dependent_modules(data.output)\n",
+    "\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
     "psboard = PsBoard(s)\n",
@@ -99,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
