fix labels, remove useless move_points.update(), add truncate method on table

--- a/notebooks/MBKMeansWithLabelsDemo.ipynb
+++ b/notebooks/MBKMeansWithLabelsDemo.ipynb
@@ -37,7 +37,7 @@
     "dir_name = os.path.join(tempfile.gettempdir(), 'progressivis_tmp_')\n",
     "os.makedirs(dir_name, exist_ok=True)\n",
     "file_name = os.path.join(dir_name, \"foobar.csv\")\n",
-    "gen_csv(file_name, rows=999999, reset=True) \n",
+    "gen_csv(file_name, rows=1_000_000, reset=True) \n",
     "data = CSVLoader(file_name, skipinitialspace=True, header=None, index_col=False,scheduler=s)\n",
     "n_clusters = 3\n",
     "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=n_clusters, \n",
