adding order=asc/desc option fir PsBoard

--- a/notebooks/MBKMeansDemo.ipynb
+++ b/notebooks/MBKMeansDemo.ipynb
@@ -45,7 +45,7 @@
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
     "\n",
-    "psboard = PsBoard(s)\n",
+    "psboard = PsBoard(s, order='desc')\n",
     "# Visualisations require registration :\n",
     "# 1) When widget provides the link_module() method do :\n",
     "psboard.register_visualisation(Scatterplot(), sp)\n",
@@ -54,6 +54,13 @@
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
     "gather_and_run(s.start(), *psboard.coroutines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Click  _&#x1f441; mc_scatter_plot_1_ below to display the scatterplot:"
    ]
   },
   {
