--- a/notebooks/MBKMeansSimpleDemo.ipynb
+++ b/notebooks/MBKMeansSimpleDemo.ipynb
@@ -57,7 +57,7 @@
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
     "\n",
-    "psboard = PsBoard(s)\n",
+    "psboard = PsBoard(s, order='desc')\n",
     "# Visualisations require registration :\n",
     "# 1) When widget provides the link_module() method do :\n",
     "psboard.register_visualisation(Scatterplot(), sp)\n",
@@ -69,6 +69,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Click  _&#x1f441; mc_scatter_plot_1_ below to display the scatterplot:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -76,8 +83,6 @@
    },
    "outputs": [],
    "source": [
-    "#print(psboard.viz_register)\n",
-    "#display(psboard.viz_register['mc_scatter_plot_1'][0][0])\n",
     "display(psboard)"
    ]
   }
@@ -98,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
