--- a/notebooks/PsBoardDemo4Binder.ipynb
+++ b/notebooks/PsBoardDemo4Binder.ipynb
@@ -66,7 +66,7 @@
     "MULTICLASS.create_dependent_modules(CSV)\n",
     "\n",
     "# Create the dashboard object\n",
-    "psboard = PsBoard(s)\n",
+    "psboard = PsBoard(s, order='desc')\n",
     "# Visualisations require registration :\n",
     "# 1) When widget provides the link_module() method do :\n",
     "psboard.register_visualisation(Scatterplot(disable=['init_centroids']), MULTICLASS)\n",
@@ -76,6 +76,13 @@
     "# Start application :\n",
     "\n",
     "gather_and_run(s.start(), *psboard.coroutines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Click  _&#x1f441; mc_scatter_plot_1_ below to display the scatterplot:"
    ]
   },
   {
