--- a/notebooks/MBKMeansWithLabelsDemo.ipynb
+++ b/notebooks/MBKMeansWithLabelsDemo.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
-    "psboard = PsBoard(s)\n",
+    "psboard = PsBoard(s, order='desc')\n",
     "# Visualisations require registration :\n",
     "# 1) When widget provides the link_module() method do :\n",
     "psboard.register_visualisation(Scatterplot(disable=['filter']), sp)\n",
@@ -70,6 +70,13 @@
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
     "gather_and_run(s.start(), *psboard.coroutines)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Click  _&#x1f441; mc_scatter_plot_1_ below to display the scatterplot:"
    ]
   },
   {
