--- a/demos/MBKMeansDemo.ipynb
+++ b/demos/MBKMeansDemo.ipynb
@@ -19,22 +19,18 @@
     "Clustering datasets may be found at\n",
     "https://cs.joensuu.fi/sipu/datasets/\n",
     "\"\"\"\n",
-    "from progressivis import Scheduler, Every#, log_level\n",
+    "from progressivis import Scheduler\n",
     "from progressivis.cluster import MBKMeans\n",
     "from progressivis.io import CSVLoader\n",
     "from progressivis.vis import MCScatterPlot\n",
     "from progressivis.datasets import get_dataset\n",
-    "from progressivis.stats import RandomTable\n",
     "from progressivis.core.utils import gather_and_run\n",
     "from progressivis.utils.psdict import PsDict\n",
     "import numpy as np\n",
-    "try:\n",
-    "    s = scheduler\n",
-    "except NameError:\n",
-    "    s = Scheduler()\n",
-    "    #log_level(package=\"progressivis.cluster\")\n",
     "\n",
-    "data = CSVLoader(get_dataset('cluster:s1'),sep='\\\\s+',skipinitialspace=True,header=None,index_col=False,scheduler=s)\n",
+    "s = Scheduler()\n",
+    "data = CSVLoader(get_dataset('cluster:s1'),sep='\\\\s+', skipinitialspace=True,\n",
+    "                 header=None,index_col=False,scheduler=s)\n",
     "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=15, batch_size=100, is_input=False, scheduler=s)\n",
     "sp = MCScatterPlot(scheduler=s, classes=[('Scatterplot', '_0', '_1', mbkmeans)])\n",
     "sp.create_dependent_modules(data,'result')\n",
@@ -44,7 +40,6 @@
     "\n",
     "sp.move_point = mbkmeans.moved_center # for input management\n",
     "# Create the dashboard object\n",
-    "\n",
     "psboard = PsBoard(s, order='desc')\n",
     "# Visualisations require registration :\n",
     "# 1) When widget provides the link_module() method do :\n",
@@ -91,7 +86,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
