--- a/demos/MBKMeansWithLabelsDemo.ipynb
+++ b/demos/MBKMeansWithLabelsDemo.ipynb
@@ -15,30 +15,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from progressivis import Scheduler, Every#, log_level\n",
+    "from progressivis import Scheduler\n",
     "from progressivis.cluster import MBKMeans, MBKMeansFilter\n",
     "from progressivis.io import CSVLoader\n",
     "from progressivis.vis import MCScatterPlot\n",
-    "from progressivis.datasets import get_dataset\n",
-    "from progressivis.stats import RandomTable\n",
     "from progressivis.core.utils import gather_and_run\n",
     "from progressivis.utils.psdict import PsDict\n",
-    "import pandas as pd\n",
+    "from progressivis.stats.blobs_table import BlobsTable, MVBlobsTable\n",
     "import numpy as np\n",
-    "import os.path\n",
-    "import tempfile\n",
-    "from progressivis.datasets.random import generate_random_multivariate_normal_csv as gen_csv\n",
-    "try:\n",
-    "    s = scheduler\n",
-    "except NameError:\n",
-    "    s = Scheduler()\n",
-    "    #log_level(package=\"progressivis.cluster\")\n",
     "\n",
-    "dir_name = os.path.join(tempfile.gettempdir(), 'progressivis_tmp_')\n",
-    "os.makedirs(dir_name, exist_ok=True)\n",
-    "file_name = os.path.join(dir_name, \"foobar.csv\")\n",
-    "gen_csv(file_name, rows=1_000_000, reset=True) \n",
-    "data = CSVLoader(file_name, skipinitialspace=True, header=None, index_col=False,scheduler=s)\n",
+    "s = Scheduler()\n",
+    "MULTIVARIATE_NORMAL = True\n",
+    "if not MULTIVARIATE_NORMAL: # simple isotropic blobs (using scikit-learn make_blobs)\n",
+    "    centers = [(0.1, 0.3), (0.7, 0.5), (-0.4, -0.3)]\n",
+    "    data = BlobsTable(columns=['_0', '_1'],  centers=centers, cluster_std=0.2, rows=999999, scheduler=s)\n",
+    "else: # i.e. control each cluster's covariance matrix (using numpy.random.multivariate_normal)\n",
+    "    means = [0.1, 0.3], [0.7, 0.5], [-0.4, -0.3]\n",
+    "    covs = [[0.01, 0], [0, 0.09]], [[0.04, 0], [0, 0.01]], [[0.09, 0.04], [0.04, 0.02]]\n",
+    "    data = MVBlobsTable(columns=['_0', '_1'], means=means, covs=covs, rows=2_000_000, scheduler=s)\n",
     "n_clusters = 3\n",
     "mbkmeans = MBKMeans(columns=['_0', '_1'], n_clusters=n_clusters, \n",
     "                    batch_size=100, tol=0.01, is_input=False, scheduler=s)\n",
@@ -107,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
