--- a/demos/PsBoardDemo.ipynb
+++ b/demos/PsBoardDemo.ipynb
@@ -17,54 +17,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from progressivis.core import Scheduler, Every\n",
+    "from progressivis.core import Scheduler\n",
     "from progressivis.core.utils import gather_and_run\n",
     "from progressivis.table import Table\n",
     "from progressivis.vis import MCScatterPlot\n",
     "from progressivis.io import CSVLoader\n",
-    "#from progressivis.datasets import get_dataset\n",
-    "from progressivis.table.constant import Constant\n",
-    "import asyncio as aio\n",
-    "import threading\n",
-    "import os\n",
-    "\n",
-    "def _quiet(x): pass\n",
     "\n",
     "def _filter(df):\n",
-    "    pklon = df['pickup_longitude']\n",
-    "    pklat = df['pickup_latitude']\n",
-    "    dolon = df['dropoff_longitude']\n",
-    "    dolat = df['dropoff_latitude']\n",
-    "\n",
-    "\n",
+    "    pklon, pklat = df['pickup_longitude'], df['pickup_latitude']\n",
+    "    dolon, dolat = df['dropoff_longitude'], df['dropoff_latitude']\n",
     "    return df[(pklon > -74.08) & (pklon < -73.5) & (pklat > 40.55) & (pklat < 41.00) &\n",
     "                  (dolon > -74.08) & (dolon < -73.5) & (dolat > 40.55) & (dolat < 41.00)]\n",
     "\n",
-    "try:\n",
-    "    s = scheduler\n",
-    "except NameError:\n",
-    "    s = Scheduler()\n",
-    "\n",
+    "s = Scheduler()\n",
     "URLS = [f\"https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_2015-0{n}.csv\" for n in range(1,7)]\n",
-    "\n",
-    "FILENAMES = pd.DataFrame({'filename': URLS})\n",
-    "CST = Constant(Table('filenames', data=FILENAMES), scheduler=s)\n",
-    "CSV = CSVLoader(index_col=False, skipinitialspace=True,\n",
+    "CSV = CSVLoader(URLS, index_col=False, skipinitialspace=True,\n",
     "                usecols=['pickup_longitude', 'pickup_latitude',\n",
     "                             'dropoff_longitude', 'dropoff_latitude'],\n",
-    "                filter_=_filter, scheduler=s) # TODO: reimplement filter in read_csv.py\n",
-    "\n",
-    "CSV.input.filenames = CST.output[0]\n",
-    "PR = Every(scheduler=s, proc=_quiet)\n",
-    "PR.input[0] = CSV.output[0]\n",
-    "\n",
-    "\n",
+    "                filter_=_filter, scheduler=s)\n",
     "MULTICLASS = MCScatterPlot(scheduler=s, classes=[\n",
     "    ('pickup', 'pickup_longitude', 'pickup_latitude'),\n",
     "    ('dropoff', 'dropoff_longitude', 'dropoff_latitude')], approximate=True)\n",
     "MULTICLASS.create_dependent_modules(CSV)\n",
-    "\n",
     "# Create the dashboard object\n",
     "psboard = PsBoard(s, order='desc')\n",
     "# Visualisations require registration :\n",
@@ -74,7 +48,6 @@
     "# psboard.register_visualisation(FooWidget(), bar_module, glue=glue_func)\n",
     "# NB: glue_func(widget, module)-> [coroutine] must be provided\n",
     "# Start application :\n",
-    "\n",
     "gather_and_run(s.start(), *psboard.coroutines)"
    ]
   },
@@ -115,7 +88,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
