--- a/notebooks/CSVSniffer.ipynb
+++ b/notebooks/CSVSniffer.ipynb
@@ -15,15 +15,7 @@
    "execution_count": 2,
    "id": "liquid-shield",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Column: 'VendorID'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sniffer = CSVSniffer(\"https://s3.amazonaws.com/nyc-tlc/trip+data/yellow_tripdata_2015-01.csv\")"
    ]
@@ -31,18 +23,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "silver-gauge",
+   "id": "random-perspective",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3595cda09b894b82950bccf11d223fd6",
+       "model_id": "a50ee40f48704dc98661c190d7f84783",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(VBox(children=(RadioButtons(options=((',', ','), (';', ';'), ('<TAB>', '\\t'), ('…"
+       "VBox(children=(HBox(children=(VBox(children=(Label(value='Delimiter:'), RadioButtons(options=((',', ','), (';'…"
       ]
      },
      "metadata": {},
@@ -55,8 +47,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "taken-lawyer",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['VendorID',\n",
+       " 'tpep_pickup_datetime',\n",
+       " 'tpep_dropoff_datetime',\n",
+       " 'passenger_count',\n",
+       " 'pickup_longitude',\n",
+       " 'pickup_latitude',\n",
+       " 'RateCodeID',\n",
+       " 'store_and_fwd_flag',\n",
+       " 'dropoff_longitude',\n",
+       " 'dropoff_latitude',\n",
+       " 'fare_amount',\n",
+       " 'extra',\n",
+       " 'mta_tax',\n",
+       " 'tip_amount',\n",
+       " 'tolls_amount',\n",
+       " 'improvement_surcharge',\n",
+       " 'total_amount']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sniffer._usecols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "swedish-vampire",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['VendorID',\n",
+       " 'tpep_pickup_datetime',\n",
+       " 'tpep_dropoff_datetime',\n",
+       " 'passenger_count',\n",
+       " 'trip_distance',\n",
+       " 'pickup_longitude',\n",
+       " 'pickup_latitude',\n",
+       " 'RateCodeID',\n",
+       " 'store_and_fwd_flag',\n",
+       " 'dropoff_longitude',\n",
+       " 'dropoff_latitude',\n",
+       " 'payment',\n",
+       " 'fare_amount',\n",
+       " 'extra',\n",
+       " 'mta_tax',\n",
+       " 'tip_amount',\n",
+       " 'tolls_amount',\n",
+       " 'improvement_surcharge',\n",
+       " 'total_amount']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sniffer._rename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "directed-portable",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adaptive-feeding",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "minus-alliance",
    "metadata": {},
    "outputs": [],
    "source": []
