Change types, usecols

--- a/notebooks/CSVSniffer.ipynb
+++ b/notebooks/CSVSniffer.ipynb
@@ -29,7 +29,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3798f57e15c943ba9585d8d11857f5d5",
+       "model_id": "0d3809a9bd624302b6300f0748489ab4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -47,8 +47,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "tough-calculator",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VendorID                          int64\n",
+       "tpep_pickup_datetime     datetime64[ns]\n",
+       "tpep_dropoff_datetime            object\n",
+       "passenger_count                   int64\n",
+       "trip_distance                   float64\n",
+       "pickup_longitude                float64\n",
+       "pickup_latitude                 float64\n",
+       "RateCodeID                        int64\n",
+       "store_and_fwd_flag               object\n",
+       "dropoff_longitude               float64\n",
+       "dropoff_latitude                float64\n",
+       "payment_type                      int64\n",
+       "fare_amount                     float64\n",
+       "extra                           float64\n",
+       "mta_tax                         float64\n",
+       "tip_amount                      float64\n",
+       "tolls_amount                    float64\n",
+       "improvement_surcharge           float64\n",
+       "total_amount                    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "wrapped-affect",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0\n",
+       "1     0\n",
+       "2     0\n",
+       "3     0\n",
+       "4     0\n",
+       "     ..\n",
+       "94    0\n",
+       "95    0\n",
+       "96    0\n",
+       "97    0\n",
+       "98    0\n",
+       "Length: 99, dtype: int8"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sniffer._df2.store_and_fwd_flag.cat.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "buried-highway",
+   "id": "another-saying",
    "metadata": {},
    "outputs": [],
    "source": []
