Added a lof of support for read_csv options, still many to add [skip CI]

--- a/notebooks/CSVSniffer.ipynb
+++ b/notebooks/CSVSniffer.ipynb
@@ -24,17 +24,19 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "binary-classic",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d3809a9bd624302b6300f0748489ab4",
+       "model_id": "728cf2fcdd46415caab3f5484c285235",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(VBox(children=(Label(value='Delimiter:'), RadioButtons(options=((',', ','), (';'…"
+       "VBox(children=(HBox(children=(Tab(children=(VBox(children=(RadioButtons(options=((',', ','), (';', ';'), ('<TA…"
       ]
      },
      "metadata": {},
@@ -47,73 +49,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "tough-calculator",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "VendorID                          int64\n",
-       "tpep_pickup_datetime     datetime64[ns]\n",
-       "tpep_dropoff_datetime            object\n",
-       "passenger_count                   int64\n",
-       "trip_distance                   float64\n",
-       "pickup_longitude                float64\n",
-       "pickup_latitude                 float64\n",
-       "RateCodeID                        int64\n",
-       "store_and_fwd_flag               object\n",
-       "dropoff_longitude               float64\n",
-       "dropoff_latitude                float64\n",
-       "payment_type                      int64\n",
-       "fare_amount                     float64\n",
-       "extra                           float64\n",
-       "mta_tax                         float64\n",
-       "tip_amount                      float64\n",
-       "tolls_amount                    float64\n",
-       "improvement_surcharge           float64\n",
-       "total_amount                    float64\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'dtypes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-c72ae01fdc1e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msniffer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_df2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'dtypes'"
+     ]
     }
    ],
+   "source": [
+    "sniffer._df2.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "joint-science",
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "excellent-preference",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "wrapped-affect",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     0\n",
-       "1     0\n",
-       "2     0\n",
-       "3     0\n",
-       "4     0\n",
-       "     ..\n",
-       "94    0\n",
-       "95    0\n",
-       "96    0\n",
-       "97    0\n",
-       "98    0\n",
-       "Length: 99, dtype: int8"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sniffer._df2.store_and_fwd_flag.cat.codes"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
